@@ -494,6 +494,7 @@ All (GUI):
 - Added EVT_AUI_PANE_ACTIVATED event (Ronny Krüger).
 - Added wxSplitterWindow::SetSashInvisible() (Armel Asselin).
 - Enable/disable "Window" menu items in AUI MDI correctly (wsu).
+- Added wxTimePickerCtrl::Get/SetTime().
 
 
 GTK:
